@@ -134,14 +134,14 @@ public abstract class AlternativeFudgeStreamWriter implements FudgeStreamWriter 
     if (field == null) {
       throw new NullPointerException("Cannot write a null field to a Fudge stream");
     }
-    writeField(field.getOrdinal(), field.getName(), field.getType(), field.getValue());
+    writeField(field.getName(), field.getOrdinal(), field.getType(), field.getValue());
   }
 
   /**
    * {@inheritDoc}
    */
   @Override
-  public void writeField(Integer ordinal, String name, FudgeFieldType type, Object fieldValue) {
+  public void writeField(String name, Integer ordinal, FudgeFieldType type, Object fieldValue) {
     if (fudgeFieldStart(ordinal, name, type)) {
       if (type.getTypeId() == FudgeTypeDictionary.FUDGE_MSG_TYPE_ID) {
         fudgeSubMessageStart();
